--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language:
   - cpp
 compiler:
   - gcc
+  - clang
 addons:
   apt:
     sources:
@@ -13,12 +14,15 @@ addons:
       - g++-7
       - cmake
 script:
-  # Link gcc-6 and g++-6 to their standard commands
+  # Link gcc-7 and g++-7 to their standard commands
   - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
   - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
+  # Link clang-8 and clang++-8 to their standard commands
+  - sudo ln -s /usr/bin/clang-8 /usr/local/bin/clang
+  - sudo ln -s /usr/bin/clang++-8 /usr/local/bin/clang++
   # Export CC and CXX to tell cmake which compiler to use
   - export CC=/usr/bin/gcc-7
   - export CXX=/usr/bin/g++-7
   # Check versions of gcc, g++ and cmake
-  - gcc -v && g++ -v && cmake --version
+  - gcc -v && g++ -v && cmake --version && clang --version && clang++ --version
   # Run your build commands next
