Update CMake targets
Change-Id: Ibcab511068790f50d455d9c17088ffb013c45ddd

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(Source/)
-add_subdirectory(Source/ASTNodes/)
-add_executable(compiler main.cpp)
 
+# add_subdirectory(ASTNodes/)
+include_directories(ASTNodes)
+add_executable(main main.cpp)
