Added TODOs in CMake file
Change-Id: I92eb46c9f3f2f28b629db727687f6d6842dd8b95

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,7 @@ project(MLOG,
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(Source)
 # add_subdirectory(Test) # TODO
+
+# TODO compiler flags
+# TODO if/else branch on compiler type -> LLVM bytecode and flags
+# If else rel/dbg -> O3 vs O0 etc.
