Insert build command in travis yml
Change-Id: If12e199e2f22eb1c44026a34c7a3f9359aab00ca

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ script:
   - export CXX=/usr/bin/g++-7
   # Check versions of gcc, g++ and cmake
   - gcc -v && g++ -v && cmake --version && clang --version && clang++ --version
-  # Run your build commands next
+  # Build the system
+  - ./configure
