Include Util cmake directory

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -2,4 +2,5 @@
 # add_subdirectory(ASTNodes/)
 include_directories(ASTNodes)
 include_directories(Lexer)
+include_directories(Util)
 add_executable(MLog main.cpp)
