Added Lexer library to CMake
Change-Id: I12b06ac0193efe4838256b74b0038dc3d44c9ed0

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,6 +1,6 @@
-
-# add_subdirectory(ASTNodes/)
 include_directories(ASTNodes)
 include_directories(Lexer)
 include_directories(Util)
+add_library(Lexer 
+            Lexer/Lexer.cpp)
 add_executable(MLog main.cpp)
