--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(ASTNodes)
 include_directories(Lexer)
 include_directories(Util)
-add_library(Lexer 
-            Lexer/Lexer.cpp)
-add_executable(MLog main.cpp)
+add_executable(MLog
+				main.cpp
+				Lexer/Lexer.cpp)
