Test gtest main dispatcher

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory(Lexer)
 
 add_executable(MLogTest TestRunner.cpp)
 
-target_link_libraries(MLogTest ScannerTest LexerTest gtest)
+target_link_libraries(MLogTest gtest pthread)#TODO ScannerTest LexerTest gtest)
