--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,6 +1,7 @@
-add_subdirectory(Scanner)
-add_subdirectory(Lexer)
 
 add_executable(MLogTest TestRunner.cpp)
 
-target_link_libraries(MLogTest gtest pthread)#TODO ScannerTest LexerTest gtest)
+add_subdirectory(Scanner)
+add_subdirectory(Lexer)
+
+target_link_libraries(MLogTest gtest pthread)
