--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,4 @@ script:
   - gcc -v && g++ -v && cmake --version && clang --version && clang++ --version
   # Build the system
   - ./configure
+  - ./bin/MLogTest
