--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(MLogTest TestRunner.cpp)
 add_subdirectory(Scanner)
 add_subdirectory(Lexer)
 
-target_link_libraries(MLogTest gtest pthread)
+target_link_libraries(MLogTest libgtest.a pthread)
