--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,7 +1,12 @@
+add_executable(MLogTest 
+				TestRunner.cpp
+				Scanner.cpp
+				Lexer.cpp)
 
-add_executable(MLogTest TestRunner.cpp)
-
-add_subdirectory(Scanner)
-add_subdirectory(Lexer)
-
+add_compile_definitions(MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/")
 target_link_libraries(MLogTest ${PROJECT_SOURCE_DIR}/Tools/GoogleTest/libgtest.a pthread)
+
+include_directories(${PROJECT_SOURCE_DIR}/Source/ASTNodes)
+include_directories(${PROJECT_SOURCE_DIR}/Source/Scanner)
+include_directories(${PROJECT_SOURCE_DIR}/Source/Lexer)
+include_directories(${PROJECT_SOURCE_DIR}/Source/Util)
