Lexer test fails
Change-Id: If6db2dc0b06decd0973195888d78ca6dcb85fd58

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_executable(MLogTest 
 				TestRunner.cpp
 				Scanner.cpp
-				Lexer.cpp)
+				Lexer.cpp
+				${PROJECT_SOURCE_DIR}/Source/Lexer/Lexer.cpp)
 
 add_compile_definitions(MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/")
 target_link_libraries(MLogTest ${PROJECT_SOURCE_DIR}/Tools/GoogleTest/libgtest.a pthread)
