Add TEST target flag
Change-Id: I09763205148b53ae68767ea41e60aae8853485ba

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable(MLogTest
 				Lexer.cpp
 				${PROJECT_SOURCE_DIR}/Source/Lexer/Lexer.cpp)
 
-add_compile_definitions(MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/")
+target_compile_definitions(MLogTest
+							PRIVATE MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/"
+							PRIVATE TEST)
 target_link_libraries(MLogTest ${PROJECT_SOURCE_DIR}/Tools/GoogleTest/libgtest.a pthread)
 
 include_directories(${PROJECT_SOURCE_DIR}/Source/ASTNodes)
