--- a/.travis.yml
+++ b/.travis.yml
@@ -8,80 +8,63 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-7']
+          packages: ['g++-7', 'cmake', 'libgtest-dev']
       env:
+        - CC=gcc-7
         - CXX=g++-7
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8']
+          packages: ['g++-8', 'cmake', 'libgtest-dev']
       env:
+        - CC=gcc-8
         - CXX=g++-8
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8']
+          packages: ['g++-9', 'cmake', 'libgtest-dev']
       env:
-        - CXX=g++-8
-
-    - compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-9']
-      env:
+        - CC=gcc-9
         - CXX=g++-9
 
     - compiler: clang
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-5']
-          packages: ['clang-5.0', 'g++-7']
+          packages: ['clang-5.0', 'g++-7', 'cmake', 'libgtest-dev']
       env:
+        - CC=clang-5
         - CXX=clang++-5.0
 
     - compiler: clang
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6']
-          packages: ['clang-6.0', 'g++-7']
+          packages: ['clang-6.0', 'g++-7', 'cmake', 'libgtest-dev']
       env:
+        - CC=clang-6
         - CXX=clang++-6.0
 
     - compiler: clang
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-7']
-          packages: ['clang-7', 'g++-7']
+          packages: ['clang-7', 'g++-7', 'cmake', 'libgtest-dev']
       env:
+        - CC=clang-7
         - CXX=clang++-7
 
     - compiler: clang
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
-          packages: ['clang-8', 'g++-8']
+          packages: ['clang-8', 'g++-8', 'cmake', 'libgtest-dev']
       env:
-        - CXX=clang++-8
-
-    - compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
-          packages: ['clang-8', 'g++-8']
-      env:
-        - CXX=clang++-8
-
-    - compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
-          packages: ['clang-8', 'g++-8']
-      env:
+        - CC=clang-8
         - CXX=clang++-8
 
     - compiler: clang
@@ -91,10 +74,9 @@ matrix:
             - ubuntu-toolchain-r-test
             - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-          packages:
-            - clang-9
-            - g++-9
+          packages: ['clang-9', 'g++-9', 'cmake', 'libgtest-dev']
       env:
+        - CC=clang-9
         - CXX=clang++-9
 
 script:
