--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['g++-7', 'cmake', 'libgtest-dev']
       env:
         - CC=gcc-7
@@ -16,7 +16,7 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['g++-8', 'cmake', 'libgtest-dev']
       env:
         - CC=gcc-8
@@ -25,7 +25,7 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['g++-9', 'cmake', 'libgtest-dev']
       env:
         - CC=gcc-9
@@ -34,7 +34,8 @@ matrix:
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-5']
+          sources: ['llvm-toolchain-xenial-5']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['clang-5.0', 'g++-7', 'cmake', 'libgtest-dev']
       env:
         - CC=clang-5.0
@@ -43,7 +44,8 @@ matrix:
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6']
+          sources: ['llvm-toolchain-xenial-6']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['clang-6.0', 'g++-7', 'cmake', 'libgtest-dev']
       env:
         - CC=clang-6.0
@@ -52,7 +54,8 @@ matrix:
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-7']
+          sources: ['llvm-toolchain-xenial-7']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['clang-7', 'g++-7', 'cmake', 'libgtest-dev']
       env:
         - CC=clang-7
@@ -61,7 +64,8 @@ matrix:
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
+          sources: ['llvm-toolchain-xenial-8']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
           packages: ['clang-8', 'g++-8', 'cmake', 'libgtest-dev']
       env:
         - CC=clang-8
@@ -71,8 +75,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
-            - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
+              sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main ppa:ubuntu-toolchain-r/test'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages: ['clang-9', 'g++-9', 'cmake', 'libgtest-dev']
       env:
