--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,8 @@ matrix:
       addons:
         apt:
           sources:
-              sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main ppa:ubuntu-toolchain-r/test'
+              sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
+              sourceline: 'ppa:ubuntu-toolchain-r/test'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages: ['clang-9', 'g++-9', 'cmake', 'libgtest-dev']
       env:
