--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(MLog
 				main.cpp
 				Lexer/Lexer.cpp
 				Parser/Parser.cpp)
+
+target_compile_options (MLog PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
