--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(ASTNodes)
 include_directories(Lexer)
+include_directories(Parser)
 include_directories(Util)
 add_executable(MLog
 				main.cpp
