Insert custom exception class and some utils
Change-Id: Ic8ce5548f21431f72a3105bcb4e996aef58a9da8

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(ASTNodes)
 include_directories(Lexer)
 include_directories(Parser)
+include_directories(Util)
 add_executable(MLog
 				main.cpp
 				Lexer/Lexer.cpp
