Edit test cmake lists for parser
Change-Id: I32195858869ace4f338a05739ba305307981d67c

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,9 +3,9 @@ add_executable(MLogTest
 				TestRunner.cpp
 				Scanner.cpp
 				Lexer.cpp
-				# Parser.cpp
+				Parser.cpp
 				${PROJECT_SOURCE_DIR}/Source/Lexer/Lexer.cpp
-				# ${PROJECT_SOURCE_DIR}/Source/Parser/Parser.cpp
+				${PROJECT_SOURCE_DIR}/Source/Parser/Parser.cpp
 				)
 
 target_compile_options (MLog PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
