Change ASTNodes folder in build files
Change-Id: I5f333422eac0661c313b8194efd9deb03894e2ab

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(ASTNodes)
+include_directories(ASTNode)
 include_directories(Lexer)
 include_directories(Parser)
 include_directories(Util)
@@ -6,6 +6,6 @@ add_executable(MLog
 				main.cpp
 				Lexer/Lexer.cpp
 				Parser/Parser.cpp
-				ASTNodes/ASTNode.cpp)
+				ASTNode/ASTNode.cpp)
 
 target_compile_options (MLog PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
