--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,13 @@ else()
     message(FATAL_ERROR "Unknown compiler " ${CMAKE_CXX_COMPILER_ID} ". Aborting.")
 endif()
 
-OPTION(LEXDBG "Select ON to print lexing result" OFF)
+OPTION(TOKDBG "Select ON to print lexing result" OFF)
 
-# if (LEXDBG)
-#     set(LEXDBG ON CACHE BOOL "Select ON to print lexing result")
+# if (TOKDBG)
+#     set(TOKDBG ON CACHE BOOL "Select ON to print lexing result")
 # else()
-#     set(LEXDBG OFF CACHE BOOL "Select ON to print lexing result")
-# ENDIF(LEXDBG)
+#     set(TOKDBG OFF CACHE BOOL "Select ON to print lexing result")
+# ENDIF(TOKDBG)
 
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(Source)
