--- a/.travis.yml
+++ b/.travis.yml
@@ -22,35 +22,36 @@ matrix:
         - CC=gcc-8
         - CXX=g++-8
 
-    - compiler: clang
-      addons:
-        apt:
-          sources: ['llvm-toolchain-xenial-6']
-          sourceline: "ppa:ubuntu-toolchain-r/test"
-          packages: ['clang-6.0', 'g++-7', 'cmake']
-      env:
-        - CC=clang-6.0
-        - CXX=clang++-6.0
+    # TODO
+    # - compiler: clang
+    #   addons:
+    #     apt:
+    #       sources: ['llvm-toolchain-xenial-6']
+    #       sourceline: "ppa:ubuntu-toolchain-r/test"
+    #       packages: ['clang-6.0', 'g++-7', 'cmake']
+    #   env:
+    #     - CC=clang-6.0
+    #     - CXX=clang++-6.0
 
-    - compiler: clang
-      addons:
-        apt:
-          sources: ['llvm-toolchain-xenial-7']
-          sourceline: "ppa:ubuntu-toolchain-r/test"
-          packages: ['clang-7', 'g++-7', 'cmake']
-      env:
-        - CC=clang-7
-        - CXX=clang++-7
+    # - compiler: clang
+    #   addons:
+    #     apt:
+    #       sources: ['llvm-toolchain-xenial-7']
+    #       sourceline: "ppa:ubuntu-toolchain-r/test"
+    #       packages: ['clang-7', 'g++-7', 'cmake']
+    #   env:
+    #     - CC=clang-7
+    #     - CXX=clang++-7
 
-    - compiler: clang
-      addons:
-        apt:
-          sources: ['llvm-toolchain-xenial-8']
-          sourceline: "ppa:ubuntu-toolchain-r/test"
-          packages: ['clang-8', 'g++-8', 'cmake']
-      env:
-        - CC=clang-8
-        - CXX=clang++-8
+    # - compiler: clang
+    #   addons:
+    #     apt:
+    #       sources: ['llvm-toolchain-xenial-8']
+    #       sourceline: "ppa:ubuntu-toolchain-r/test"
+    #       packages: ['clang-8', 'g++-8', 'cmake']
+    #   env:
+    #     - CC=clang-8
+    #     - CXX=clang++-8
 
 script:
   - $CXX --version
