Refactor main cmake plan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ else()
     message(FATAL_ERROR "Unknown compiler " ${CMAKE_CXX_COMPILER_ID} ". Aborting.")
 endif()
 
+## DEBUG Tracing options
 OPTION(SCDBG "Select ON to enable scanner traces" OFF)
 OPTION(TOKDBG "Select ON to enable token traces" OFF)
 OPTION(LEXDBG "Select ON to enable lexer traces" OFF)
@@ -22,13 +23,10 @@ OPTION(PARDBG "Select ON to enable parser traces" OFF)
 OPTION(SEMDBG "Select ON to enable semantic analyser traces" OFF)
 OPTION(CODEDBG "Select ON to enable code generator traces" OFF)
 
-# if (TOKDBG)
-#     set(TOKDBG ON CACHE BOOL "Select ON to print lexing result")
-# else()
-#     set(TOKDBG OFF CACHE BOOL "Select ON to print lexing result")
-# ENDIF(TOKDBG)
-
+## Define executable output folder
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+## Include source folders
 add_subdirectory(Source)
 add_subdirectory(Test)
 
