Include new source file in targets

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -6,7 +6,8 @@ add_executable(MLog
 				main.cpp
 				Lexer/Lexer.cpp
 				Parser/Parser.cpp
-				ASTNode/ASTNode.cpp)
+				ASTNode/ASTNode.cpp
+				Util/Except.cpp)
 
 target_compile_options (MLog PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
 
