--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(MLogTest
 				${PROJECT_SOURCE_DIR}/Source/ASTNode/ASTNode.cpp
 				${PROJECT_SOURCE_DIR}/Source/Lexer/Lexer.cpp
 				${PROJECT_SOURCE_DIR}/Source/Parser/Parser.cpp
+				${PROJECT_SOURCE_DIR}/Source/Util/Except.cpp
 				)
 
 ## CXX_FLAGS
