Change repo name to Mlang

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(MLogTest 
+add_executable(MlangTest 
 				TestRunner.cpp
 				Scanner.cpp
 				Lexer.cpp
@@ -11,41 +11,41 @@ add_executable(MLogTest
 				)
 
 ## CXX_FLAGS
-target_compile_options (MLogTest PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
+target_compile_options (MlangTest PRIVATE -std=c++17 -O3 -Wall -Wextra -Werror)
 
 if (LLVM)
-	target_compile_options (MLogTest PRIVATE -emit-llvm)
+	target_compile_options (MlangTest PRIVATE -emit-llvm)
 ENDIF (LLVM)
 
 ## Pre-processor definitions
-target_compile_definitions(MLogTest PRIVATE MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/")
+target_compile_definitions(MlangTest PRIVATE MODEL_PATH="${PROJECT_SOURCE_DIR}/Models/")
 
 if (SCDBG)
-	target_compile_definitions(MLogTest PRIVATE SCDBG)
+	target_compile_definitions(MlangTest PRIVATE SCDBG)
 ENDIF(SCDBG)
 
 if (TOKDBG)
-	target_compile_definitions(MLogTest PRIVATE TOKDBG)
+	target_compile_definitions(MlangTest PRIVATE TOKDBG)
 ENDIF(TOKDBG)
 
 if (LEXDBG)
-	target_compile_definitions(MLogTest PRIVATE LEXDBG)
+	target_compile_definitions(MlangTest PRIVATE LEXDBG)
 ENDIF(LEXDBG)
 
 if (PARDBG)
-	target_compile_definitions(MLogTest PRIVATE PARDBG)
+	target_compile_definitions(MlangTest PRIVATE PARDBG)
 ENDIF(PARDBG)
 
 if (SEMDBG)
-	target_compile_definitions(MLogTest PRIVATE SEMDBG)
+	target_compile_definitions(MlangTest PRIVATE SEMDBG)
 ENDIF(SEMDBG)
 
 if (CODEDBG)
-	target_compile_definitions(MLogTest PRIVATE CODEDBG)
+	target_compile_definitions(MlangTest PRIVATE CODEDBG)
 ENDIF(CODEDBG)
 
 ## Library linking
-target_link_libraries(MLogTest gtest pthread)
+target_link_libraries(MlangTest gtest pthread)
 
 include_directories(${PROJECT_SOURCE_DIR}/Source/ASTNode)
 include_directories(${PROJECT_SOURCE_DIR}/Source/Scanner)
