Extend Test Cmakelist for semantic analysis

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -52,3 +52,5 @@ include_directories(${PROJECT_SOURCE_DIR}/Source/Scanner)
 include_directories(${PROJECT_SOURCE_DIR}/Source/Lexer)
 include_directories(${PROJECT_SOURCE_DIR}/Source/Parser)
 include_directories(${PROJECT_SOURCE_DIR}/Source/Util)
+include_directories(${PROJECT_SOURCE_DIR}/Source/Visitors)
+include_directories(${PROJECT_SOURCE_DIR}/Source/Visitors/SemAnalyzer)
