--- a/Source/Lexer/CMakeLists.txt
+++ b/Source/Lexer/CMakeLists.txt
@@ -1,2 +1,2 @@
 target_include_directories(Mlang PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
-target_sources(Mlang PRIVATE NameAnalysis.cpp)
+target_sources(Mlang PRIVATE Lexer.cpp)
