--- a/Source/Visitors/CMakeLists.txt
+++ b/Source/Visitors/CMakeLists.txt
@@ -1,3 +1,2 @@
+target_include_directories(MlangSource PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 add_subdirectory(SemAnalyzer)
-
-target_include_directories(Mlang PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
