--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sourceline: "ppa:ubuntu-toolchain-r/test"
-          sourceline: "deb http://http.kali.org/kali kali-rolling main non-free contrib"
+          sourceline: "ppa:ubuntu-toolchain-r/test ppa:george-edison55/cmake-3.x"
           packages: ['g++-7', 'cmake']
       env:
         - CC=gcc-7
