--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sourceline: "ppa:ubuntu-toolchain-r/test ppa:george-edison55/cmake-3.x"
-          packages: ['g++-7', 'cmake']
+          sources: 
+            - "ppa:ubuntu-toolchain-r/test"
+            - sourceline: "ppa:george-edison55/cmake-3.x"
+          packages: ['g++-7']
       env:
         - CC=gcc-7
         - CXX=g++-7
@@ -16,8 +18,7 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sourceline: "ppa:ubuntu-toolchain-r/test"
-          sourceline: "deb http://http.kali.org/kali kali-rolling main non-free contrib"
+          sources: "ppa:ubuntu-toolchain-r/test"
           packages: ['g++-8', 'cmake']
       env:
         - CC=gcc-8
@@ -55,6 +56,12 @@ matrix:
     #     - CXX=clang++-8
 
 script:
+  # - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4.tar.gz
+  # - tar -zxvf cmake-3.13.4.tar.gz
+  # - cd cmake-3.13.4
+  # - ./bootstrap
+  # - make
+  # - sudo make install
   - $CXX --version
   - ./configure
   - ./build/bin/MlangTest
