--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sources: 
-            - "ppa:ubuntu-toolchain-r/test"
-            - sourceline: "ppa:george-edison55/cmake-3.x"
-          packages: ['g++-7']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
+          packages: ['g++-7',]
       env:
         - CC=gcc-7
         - CXX=g++-7
@@ -18,8 +16,8 @@ matrix:
     - compiler: gcc
       addons:
         apt:
-          sources: "ppa:ubuntu-toolchain-r/test"
-          packages: ['g++-8', 'cmake']
+          sourceline: "ppa:ubuntu-toolchain-r/test"
+          packages: ['g++-8',]
       env:
         - CC=gcc-8
         - CXX=g++-8
@@ -55,13 +53,15 @@ matrix:
     #     - CC=clang-8
     #     - CXX=clang++-8
 
+before_script:
+  - CMAKE_URL="https://cmake.org/files/v3.13/cmake-3.13.0-rc3-Linux-x86_64.tar.gz"
+  - mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+  - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+  - echo ${PATH}
+  - cmake --version
+
 script:
-  # - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4.tar.gz
-  # - tar -zxvf cmake-3.13.4.tar.gz
-  # - cd cmake-3.13.4
-  # - ./bootstrap
-  # - make
-  # - sudo make install
   - $CXX --version
+  - cmake --version
   - ./configure
   - ./build/bin/MlangTest
