--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ matrix:
 
 before_script:
   - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.sh
-  - yes | sh cmake-3.13.4-Linux-x86_64.sh
+  - yes | sh cmake-3.13.4-Linux-x86_64.sh --skip-license
   - export PATH=./cmake-3.13.4-Linux-x86_64/bin/:${PATH}
   - echo ${PATH}
   - ./cmake-3.13.4-Linux-x86_64/bin/cmake --version
