--- a/.travis.yml
+++ b/.travis.yml
@@ -56,11 +56,11 @@ matrix:
 before_script:
   - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.sh
   - yes | sh cmake-3.13.4-Linux-x86_64.sh --skip-license
-  - export PATH=./cmake-3.13.4-Linux-x86_64/bin/:${PATH}
+  - export PATH=./bin/:${PATH}
   - ls
   - ls ./*/
   - echo ${PATH}
-  - ./cmake-3.13.4-Linux-x86_64/bin/cmake --version
+  - ./bin/cmake --version
 
 script:
   - $CXX --version
