--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
 before_script:
   - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.sh
   - yes | sh cmake-3.13.4-Linux-x86_64.sh --skip-license
-  - export PATH=./bin/:${PATH}
+  - export PATH=${pwd}/bin/:${PATH}
   - ls
   - ls ./*/
   - echo ${PATH}
