Extend visitor cmake list for source file

--- a/Source/Visitors/CMakeLists.txt
+++ b/Source/Visitors/CMakeLists.txt
@@ -1,2 +1,3 @@
 target_include_directories(MlangSource PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_sources(MlangSource PUBLIC ASTVisitor.cpp)
 add_subdirectory(SemAnalyzer)
